--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,15 +69,20 @@
       }
 
       header {
+            background-color: #b1a6db;
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 10px 20px;
-            background-color: #f1f1f1;
-            border-bottom: 1px solid #ccc;
             border-top-left-radius: 30px;
             border-top-right-radius: 30px;
             height: 70px;
+            color: #fff;
+      }
+
+      header img {
+            width: 180px;
+            height: auto;
       }
 
       main {
@@ -92,16 +97,15 @@
             align-items: center;
             justify-content: center;
             height: 100%;
-            background-color: #f1f1f1;
       }
 
       footer {
+            background-color: #b1a6dbb1;
+            color: #fff;
             height: 60px;
-            background-color: #f1f1f1;
             display: flex;
             justify-content: center;
             align-items: center;
-            border-top: 1px solid #ccc;
             border-bottom-left-radius: 30px;
             border-bottom-right-radius: 30px;
       }
@@ -131,6 +135,11 @@
             font-weight: bold;
             padding: 10px;
             transition: color 0.3s, transform 0.3s;
+      }
+
+      .footer-icons {
+            width: 24px;
+            height: 24px;
       }
 
       /* 2.5 Estilos base para Links */
@@ -171,132 +180,62 @@
       - Inputs
 */
 
-input {
-      width: 100%;
-      padding: 10px;
-      font-size: 14px;
-      color: white;
-      background-image: linear-gradient(to left, var(--blue-color), var(--red-color));
-      border: 0;
-      border-radius: 5px;
-      margin-bottom: 15px;
-      box-sizing: border-box;
-}
 
-input::placeholder {
-      color: rgb(210, 210, 210);
-}
-
-input[type="submit"] {
-      width: 100%;
-      padding: 10px;
-      font-size: 14px;
-      color: white;
-      background-image: linear-gradient(to top left, var(--darkblue-color), var(--darkred-color));
-      border: 0;
-      border-radius: 5px;
-      margin-bottom: 15px;
-      box-sizing: border-box;
-}
-
-
-
-     /* 4.5 Notificaciones CSS */
-.notification-container {
-      position: fixed;
-      text-align: center;
-      width:60%;
-      bottom: 30px; /* Ajusta esto para moverlas un poco más arriba */
-      right: 20px;
-      display: flex;
-      flex-direction: column-reverse;
-      gap: 15px; /* Ajuste en el espacio entre notificaciones */
-      max-width: 400px; /* Aumenta el ancho máximo */
-      margin-bottom: 30px;
-  }
-  
-  /* Notificación */
-  .messenger {
-      padding: 15px;
-      border-radius: 10px; /* Aumenta el radio para que sea más redondeado */
-      color: white;
-      font-size: 12px; /* Aumenta el tamaño de la fuente */
-      opacity: 1;
-      animation: fadeOut 6s forwards;
-      box-sizing: border-box; /* Asegura que el padding no afecte el tamaño */
-  }
-  
-  /* Estilos de notificación */
-  .divNotiError {
-      background-color: #e53935;
-  }
-  
-  .divNotiLike {
-      background-color: #4caf50;
-  }
-  
-  .divNotiNope {
-      background-color: #fb8c00;
-  }
-  
-  .divNotiOther {
-      background-color: #1e88e5;
-  }
-  
-  .divNotiSuccess {
-      background-color: green;
-  }
-  
-  .divNotiWarning {
-      background-color: orange;
-  }
-  
-  .divNotiInfo {
-      background-color: blue;
-  }
-  
 
       /* 4.5 Notificaciones CSS */
-
       .notification-container {
             position: fixed;
             text-align: center;
-            width: 20%;
-            bottom: 20px;
-            right: 20px;
+            width: 70%;
+            top: 100px; /* Ajusta esto para moverlas un poco más arriba */
+            right: 70px;
             display: flex;
             flex-direction: column-reverse;
-            gap: 10px;
-            max-width: 300px;
+            gap: 15px; /* Ajuste en el espacio entre notificaciones */
+            max-width: 400px; /* Aumenta el ancho máximo */
+            margin-bottom: 30px;
       }
-
+  
       /* Notificación */
       .messenger {
             padding: 15px;
-            border-radius: 5px;
+            border-radius: 10px; /* Aumenta el radio para que sea más redondeado */
             color: white;
-            font-size: 16px;
+            font-size: 20px; /* Aumenta el tamaño de la fuente */
             opacity: 1;
             animation: fadeOut 6s forwards;
+            box-sizing: border-box; /* Asegura que el padding no afecte el tamaño */
       }
-
+      
       /* Estilos de notificación */
       .divNotiError {
             background-color: #e53935;
       }
-
+      
       .divNotiLike {
             background-color: #4caf50;
       }
-
+      
       .divNotiNope {
             background-color: #fb8c00;
       }
-
+      
       .divNotiOther {
             background-color: #1e88e5;
       }
-
+      
+      .divNotiSuccess {
+            background-color: green;
+      }
+      
+      .divNotiWarning {
+            background-color: orange;
+      }
+      
+      .divNotiInfo {
+            background-color: blue;
+      }
+      
 
 
 /* 
@@ -324,6 +263,154 @@ input[type="submit"] {
       - Admin Panel
 */
 
+      /* 6.4 Login */
+
+      #login {
+            background-color: #b1a6db;
+      }
+      #login-header {
+            margin-bottom: 100px;
+      }
+
+      /* Header */
+      #login-image {
+            width: 400px;
+            display: block;
+            margin: 0 auto;
+      }
+      #login-eslogan {
+            font-size: 30px;
+            font-weight: 500;
+            justify-self: center;
+      }     
+
+      /* Error Message */
+      .login-alert{
+            color: red;
+            font-size: 25px;
+            margin-top: 10px;
+            justify-self: center;
+      }
+
+      /* Inputs */
+      .form__group {
+            position: relative;
+            padding: 20px 20px 0;
+            margin-bottom: 20px;
+            width: 100%;
+      }
+
+      .form__field {
+            font-family: inherit;
+            width: 100%;
+            border: none;
+            border-bottom: 2px solid #fff;
+            /* Borde blanco */
+            outline: 0;
+            font-size: 17px;
+            color: #fff;
+            padding: 7px 0;
+            background: transparent;
+            transition: border-color 0.2s;
+      }
+
+      .form__field::placeholder {
+            color: transparent;
+      }
+
+      .form__field:placeholder-shown~.form__label {
+            font-size: 17px;
+            cursor: text;
+            top: 20px;
+      }
+
+      .form__label {
+            position: absolute;
+            top: 0;
+            display: block;
+            transition: 0.2s;
+            font-size: 17px;
+            color: #fff;
+            /* Color blanco para la etiqueta */
+            pointer-events: none;
+      }
+
+      .form__field:focus {
+            padding-bottom: 6px;
+            font-weight: 700;
+            border-width: 3px;
+            border-color: #fff;
+            /* Borde blanco cuando el campo está enfocado */
+      }
+
+      .form__field:focus~.form__label {
+            position: absolute;
+            top: 0;
+            display: block;
+            transition: 0.2s;
+            font-size: 17px;
+            color: #fff;
+            /* Color blanco para la etiqueta cuando está enfocada */
+            font-weight: 700;
+      }
+
+      /* reset input */
+      .form__field:required,
+      .form__field:invalid {
+            box-shadow: none;
+      }
+
+
+      /* Boton Login */
+      .styled-submit {
+            width: 200px;
+            margin: 20px;
+            margin-right: 20px;
+            padding: 12px 20px;
+            border: 2px solid #fff;
+            border-radius: 25px;
+            background: transparent;
+            color: #fff;
+            font-size: 17px;
+            font-weight: 700;
+            text-transform: uppercase;
+            cursor: pointer;
+            outline: none;
+            transition: background-color 0.2s, border-color 0.2s;
+            float: right;
+      }
+
+      .styled-submit:hover {
+            background-color: #fff;
+            color: #b1a6db;
+            border-color: #b1a6db;
+      }
+
+      .styled-submit:focus {
+            background-color: #fff;
+            color: #b1a6db;
+            border-color: #b1a6db;
+            outline: none;
+      }
+
+      /* Enlaces Login */
+      #login-links{
+            margin-top: 140px;
+            padding: 20px;
+      }
+      .login-link {
+            color: #fff;
+            font-size: 20px;
+            font-weight: 500;
+            text-decoration: none;
+            transition: .3s;
+            margin-top: 10px;
+      }
+
+
+
+
+
       /* 6.4 Discover */
       #discover-profiles {
             position: relative;
@@ -336,6 +423,8 @@ input[type="submit"] {
             margin-bottom: 20px;
             height: 500px;
             overflow: hidden;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
+            border-radius: 30px;
       }
 
       .profile-container {
@@ -398,15 +487,68 @@ input[type="submit"] {
       }
 
 
-      #nope, #like {
-            width: 100px;
-            padding: 15px;
-            font-size: 18px;
-            background-color: #f1f1f1;
-            border: 2px solid #ccc;
-            border-radius: 25px;
+
+
+      .discover-actionButton {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            border: none;
             cursor: pointer;
-            transition: background-color 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: white;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: all 0.2s ease;
+      }
+
+      .discover-actionButton:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      }
+
+      .discover-actionButton:active {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.12);
+      }
+
+      .nope-button {
+            border: 4px solid #ef4444;
+            transition: background-color 0.2s ease;
+      }
+
+      .nope-button:hover {
+            background-color: #ef4444;
+      }
+
+      .nope-button svg {
+            color: #ef4444;
+            transition: transform 0.2s ease;
+      }
+
+      .nope-button:hover svg {
+            transform: scale(1.1);
+            color: white;
+      }
+
+      .like-button {
+            border: 4px solid #22c55e;
+            transition: background-color 0.2s ease;
+      }
+
+      .like-button:hover {
+            background-color: #22c55e;
+      }
+
+      .like-button svg {
+            color: #22c55e;
+            transition: transform 0.2s ease;
+      }
+
+      .like-button:hover svg {
+            transform: scale(1.1);
+            color: white;
       }
 
       /* Match window */
@@ -451,7 +593,7 @@ input[type="submit"] {
             height: 100%;
       }
 
-      .profile-image {
+      .discover-image {
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -477,6 +619,109 @@ input[type="submit"] {
       .dot.active {
             background-color: #bbb;
       }
+
+      /* 6.4 Profile */
+      .container-cabecera {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+      }
+
+      .profile-image {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+      }
+      /* Form */
+      .profile-form {
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            width: 100%;
+      }
+
+      .profile-form .input-group {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+      }
+
+      .profile-form label {
+            width: 120px;
+            font-weight: bold;
+      }
+
+      .profile-form input[type="text"],
+      .profile-form input[type="date"],
+      .profile-form input[type="password"] {
+            padding: 8px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            width: 100%;
+            max-width: 300px;
+            box-sizing: border-box;
+      }
+
+      .profile-form input[type="submit"] {
+            padding: 10px;
+            font-size: 16px;
+            color: white;
+            background-color: #af4ca8;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+      }
+
+      .profile-form input[type="submit"]:hover {
+            background-color: #9c3e8d;
+      }
+      .re-pie {
+            margin-top: 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+      }
+
+      /* Mapa */
+      .input-group {
+            position: relative;
+      }
+
+      #location {
+            padding-right: 30px;
+            /* Añadir espacio para la chincheta */
+      }
+
+      #location-icon {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+      }
+
+      #map-container {
+            display: none;
+            position: absolute;
+            top: 200px;
+            /* Ajusta según sea necesario */
+            left: 50px;
+            /* Ajusta según sea necesario */
+            width: 80%;
+            height: 500px;
+            z-index: 1000;
+            background: white;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+
 
 /* 
       ==================================================
