--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -945,7 +945,12 @@
       /* 6.5 Editar Fotos */
 
       #divEditPictures{
+            overflow: auto;
             height: 100%;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+            scrollbar-width: thin;
+            scrollbar-color: #888 #f5f5f5;
       }
 
       #photoList{
@@ -962,23 +967,32 @@
             height: 30%;
       }
 
+      #photoList li:nth-child(n+3){
+            margin-top: 20px;
+      }
+
       #photoList li label{
             position: relative;
-            height: 100%;
+            height: -webkit-fill-available;
             width: 100%;
             display: flex;
       }
 
       #photoList li .deletePhotos{
-            right: 0;
+            right: 6px;
+            top: 6px;
             position: absolute;
             width: 12%;
       }
 
       #photoList li img{
-            margin: 0 auto;
             width: 100%;
             object-fit: cover;
+      }
+
+      #photoList li img.normal-photo, img.default-photo{
+            border-radius: 10px;
+            box-shadow: 6px 8px 12px rgba(0, 0, 0, 0.5);
       }
 /* 
       ==================================================
