--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,6 +74,7 @@ body {
 /* 2.2 Estilos base para HTML */
 html {
       scroll-behavior: smooth;
+      height: 100%;
 }
 
 /* 2.3 Estilos base para body y etiquetas */
@@ -81,13 +82,14 @@ body {
       margin: 0 auto;
       width: 100%;
       max-width: 460px;
-      height: 870px;
+      height: 100%;
+      /*height: 870px;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       border-radius: 30px;
-      border: 1px solid #ccc;
+      border: 1px solid #ccc;*/
 }
 
 header {
@@ -98,7 +100,7 @@ header {
       padding: 10px 20px;
       border-top-left-radius: 30px;
       border-top-right-radius: 30px;
-      height: 70px;
+      height: 8%;
       color: #fff;
       position: relative;
 }
@@ -150,7 +152,7 @@ header img {
 }
 
 main {
-      height: calc(100% - 70px - 60px);
+      height: 84%;
       padding: 20px;
       background-color: #ffffff;
 }
@@ -166,7 +168,7 @@ main {
 footer {
       background-color: #b1a6dbb1;
       color: #fff;
-      height: 60px;
+      height: 8%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -337,8 +339,14 @@ a:focus {
       background-color: #b1a6db;
 }
 
-#login-header {
+/*#login-header {
       margin-bottom: 100px;
+}*/
+
+#login-container{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
 }
 
 /* 6.4 Register */
@@ -529,19 +537,6 @@ a:focus {
       border-radius: 30px;
 }
 
-.profile-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      transition: transform 0.3s ease-out;
-      /* cursor: grab; */
-      background: white;
-      border-radius: 10px;
-      transform-origin: center;
-}
-
 #profile-image {
       display: block;
       width: 100%;
@@ -689,7 +684,6 @@ a:focus {
 }
 
 .slider {
-      position: relative;
       width: 100%;
       height: 100%;
 }
@@ -768,6 +762,16 @@ a:focus {
       border-radius: 5px;
       cursor: pointer;
 }
+
+#usermessages-container{
+      height: 92%;
+}
+
+#perfil{
+      height: 91%;
+}
+
+
 
 /* Filtro de perfiles */
 .filter-overlay {
@@ -1251,10 +1255,14 @@ to {
 
 .profile-showImage {
       width: 398.75px;
-      height: 530px;
+      height: 100%;
       object-fit: cover;
       display: block;
       margin: 0 auto;
+}
+
+main div#mostrar .profile-container{
+      height: 90%;
 }
 
 .profile-image {
@@ -1328,6 +1336,7 @@ to {
 
 .re-pie {
       margin-top: 50px;
+      margin-bottom: 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -1369,8 +1378,14 @@ to {
 }
 
 /* Profile - Mostrar */
+#profile-container{
+      height: 100%;
+}
+
 #mostrar {
-      margin-top: 50px;
+      display: flex;
+      height: 92%;
+      align-items: center;
 }
 
 #profile-showInfo {
@@ -1408,6 +1423,14 @@ to {
 
 .dot.active {
       background-color: #bbb;
+}
+
+#editar{
+      height: 96%;
+      overflow-y: scroll;
+      scrollbar-width: thin;
+      scrollbar-color: #888 #ffffff;
+      scroll-behavior: smooth;
 }
 
 /* 6.4 Mensajes */
@@ -1474,7 +1497,7 @@ to {
       display: flex;
       flex-direction: column;
       margin-top: 20px;
-      height: 405px;
+      height: 81%;
       width: 430px;
       overflow-y: hidden;
       scrollbar-width: thin;
@@ -1490,6 +1513,7 @@ to {
 }
 
 #messages-conversaciones {
+      height: 60%;
       align-items: center;
 }
 
@@ -1546,8 +1570,12 @@ to {
 }
 
 /* Chat en tiempo real */
+#chat{
+      height: 92%;
+}
+
 #chat-container {
-      height: 530px;
+      height: 87%;
       overflow-y: scroll;
       scrollbar-width: thin;
       scrollbar-color: #888 #ffffff;
@@ -1716,7 +1744,7 @@ to {
 /* Messages - Profile */
 .message-profileImage {
       width: 100%;
-      height: 530px;
+      height: 100%;
       object-fit: cover;
 
 }
@@ -1783,13 +1811,9 @@ li#firstPhoto {
       color: white;
 }
 
-/*#photoList li:nth-child(n+3){
-            margin-top: 20px;
-      }*/
-
 #photoList li label {
       position: relative;
-      height: -webkit-fill-available;
+      height: 100%;
       width: 100%;
       display: flex;
 }
