--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -347,6 +347,7 @@ a:focus {
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+      height: 100%;
 }
 
 /* 6.4 Register */
@@ -1438,8 +1439,22 @@ main div#mostrar .profile-container{
 
 /* Matches */
 #messages-matches {
-      height: 220px;
+      height: 28%;
       align-items: center;
+}
+
+.title-messenger{
+      font-size: 169%;
+      height: 20%;
+}
+
+.contenedor-foto-match{
+      height: 60%;
+}
+
+#messages-conversaciones .fuente-titulos{
+      font-size: 200%;
+      height: 12%;
 }
 
 .messages-no-content {
@@ -1450,6 +1465,7 @@ main div#mostrar .profile-container{
 }
 
 #matches-container {
+      height: 80%;
       display: flex;
       padding: 10px;
       border-radius: 10px;
@@ -1466,6 +1482,7 @@ main div#mostrar .profile-container{
 }
 
 .match-item {
+      height: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -1476,15 +1493,14 @@ main div#mostrar .profile-container{
 }
 
 .match-item img {
-      width: auto;
-      height: 100px;
+      height: 100%;
       border-radius: 10%;
       object-fit: cover;
 }
 
 .match-name {
-      margin-top: 5px;
-      font-size: 17px;
+      height: 20%;
+      font-size: 100%;
       color: #333;
 }
 
@@ -1496,8 +1512,7 @@ main div#mostrar .profile-container{
       gap: 10px;
       display: flex;
       flex-direction: column;
-      margin-top: 20px;
-      height: 81%;
+      height: 88%;
       width: 430px;
       overflow-y: hidden;
       scrollbar-width: thin;
@@ -1513,7 +1528,7 @@ main div#mostrar .profile-container{
 }
 
 #messages-conversaciones {
-      height: 60%;
+      height: 72%;
       align-items: center;
 }
 
