--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -243,7 +243,16 @@ a:focus {
       - Inputs
 */
 
+/* 4.1 botones */
 
+#navFocus a{
+      color: #CE2D4F;
+}
+
+#buttonFocus{
+      background-color: #CE2D4F;
+      color: white;
+}
 
 /* 4.5 Notificaciones CSS */
 .notification-container {
@@ -305,8 +314,6 @@ a:focus {
       background-color: blue;
 }
 
-
-
 /* 
       ==================================================
       5. Diseño y estructura
@@ -331,6 +338,7 @@ a:focus {
       - Chat/Mensajes
       - Admin Panel
       - Editar fotos
+      - 404/403
 */
 
 /* 6.4 Login */
@@ -1102,7 +1110,7 @@ input[type="range"]::-moz-range-thumb {
       width: 100%;
       height: 100%;
       transition: transform 0.3s ease-out;
-      /* cursor: grab; */
+      cursor: grab;
       background: white;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -1591,7 +1599,7 @@ main div#mostrar .profile-container{
 
 #chat-container {
       height: 87%;
-      overflow-y: scroll;
+      overflow-y: auto;
       scrollbar-width: thin;
       scrollbar-color: #888 #ffffff;
       scroll-behavior: smooth;
@@ -1833,11 +1841,16 @@ li#firstPhoto {
       display: flex;
 }
 
+#photoList li label .default-photo{
+      cursor: pointer;
+}
+
 #photoList li .deletePhotos {
       right: 6px;
       top: 6px;
       position: absolute;
       width: 12%;
+      cursor: pointer;
 }
 
 #photoList li img {
@@ -1849,6 +1862,40 @@ li#firstPhoto {
 img.default-photo {
       border-radius: 10px;
       box-shadow: 6px 8px 12px rgba(0, 0, 0, 0.5);
+}
+
+/* 6.8 403/404 */
+
+#bodyError{
+      max-width: 100%;
+      background-color: #b1a6db;
+}
+
+#bodyError #mainError{
+      height: 100%;
+      background-color: unset;
+      max-width: 460px;
+      width: 100%;
+      margin: 0 auto;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: "Roboto", serif;
+      text-align: center;
+}
+
+#bodyError #mainError img{
+      width: 100%;
+}
+
+#bodyError #mainError a{
+      color: #CE2D4F;
+}
+
+#bodyError #mainError a:hover{
+      color: var(--a-focus-color);
 }
 
 /* 
