--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,6 @@
       10. Media Queries
       ================================================== 
 */
-
 /* 
       ==================================================
       1. Variables y configuración
@@ -74,7 +73,7 @@ body {
 /* 2.2 Estilos base para HTML */
 html {
       scroll-behavior: smooth;
-      height: 100%;
+      height: 100dvh;
 }
 
 /* 2.3 Estilos base para body y etiquetas */
@@ -106,7 +105,7 @@ header {
 }
 
 header img {
-      width: 180px;
+      width: 42%;
       height: auto;
 }
 
@@ -373,7 +372,7 @@ a:focus {
 
 /* Header */
 #login-image {
-      width: 400px;
+      width: 100%;
       display: block;
       margin: 0 auto;
 }
@@ -538,9 +537,9 @@ a:focus {
       align-items: center;
       justify-content: center;
       text-align: center;
-      width: 397.48px;
+      width: 100%;
       margin-bottom: 20px;
-      height: 500px;
+      height: 100%;
       overflow: hidden;
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
       border-radius: 30px;
@@ -1095,9 +1094,9 @@ input[type="range"]::-moz-range-thumb {
       align-items: center;
       justify-content: center;
       text-align: center;
-      width: 397.48px;
+      width: 100%;
       margin-bottom: 20px;
-      height: 500px;
+      height: 100%;
       overflow: hidden;
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
       border-radius: 30px;
@@ -1263,7 +1262,7 @@ to {
 }
 
 .profile-showImage {
-      width: 398.75px;
+      width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
@@ -1521,7 +1520,7 @@ main div#mostrar .profile-container{
       display: flex;
       flex-direction: column;
       height: 88%;
-      width: 430px;
+      width: 100%;
       overflow-y: hidden;
       scrollbar-width: thin;
       scrollbar-color: #888 #f5f5f5;
@@ -1972,7 +1971,7 @@ img.default-photo {
 
       body {
             width: 100vw;
-            height: 100vh;
+            height: 100dvh;
             border-radius: 0;
             border: none;
       }
